# stm32hs

./: .gitignore  .travis.yml  README.md  STLinkUSB.cabal  cabal.project
STLink-libusb/: README.md  STLink-libusb.cabal
STLink-libusb/src/STM32/STLinkUSB/: LibUSB.hs  Test.hs
STLinkUSB/: README.md  STLinkUSB.cabal  STLinkUSB.nix  default.nix
STLinkUSB/STM32/: STLinkUSB.hs
STLinkUSB/STM32/STLinkUSB/: CortexM.hs  Env.hs  MemRW.hs  Test.hs
STLinkUSB/src/STM32/: STLinkUSB.hs
STLinkUSB/src/STM32/STLinkUSB/: Commands.hs  CortexM.hs  Dongle.hs  Env.hs  MemRW.hs  TwoBoards.hs  USB.hs  USBUtils.hs  USBXfer.hs
STM32-Zombie/: LICENSE  STM32-Zombie.cabal  STM32-Zombie.nix  cabal.config  default.nix
STM32-Zombie/app/: WebBlink.hs  demo.hs
STM32-Zombie/src/App/: ADC.hs  Blink.hs  DMABuffer.hs  LCD.hs  MS5611.hs  Main.hs  RealTimeClock.hs  Serial.hs  Stepper.hs  TLC5947.hs  TestLCD.hs  TimerDMA.hs  WS1228B.hs  WaveForm.hs
STM32-Zombie/src/STM32/: ADC.hs  API.hs  DAC.hs  DMA.hs  GPIO.hs  I2C.hs  MachineInterface.hs  MachineInterfaceSTLinkUSB.hs  PWR.hs  RCC.hs  RTC.hs  SPI.hs  Timer.hs  USART.hs  Utils.hs
STM32/STLinkUSB/: Commands.hs  Dongle.hs  TwoBoards.hs  USBUtils.hs  USBXfer.hs
STM32F103xx-SVD/: Device.hs  LicenseInfo  STM32F103xx-SVD.cabal  STM32F103xx-SVD.nix
SVD2HS/: Device.hs  SVD2HS.cabal  SVD2HS.hs
misc/: STM32Zombie-MS.tex
nix/: hix.nix
