Cabal-Version: 3.0

Name:          SVD2HS
Version:       0.1.2
Category:      STM32, Hardware, Microcontroller, SVD, Embedded
License-File:  LICENSE
Synopsis:      Translate a SVD of a micro controller to Haskell tables
Description:   Translate a SVD description of a micro controller to Haskell tables

Copyright:     2015-2022 Marc Fontaine <Marc.Fontaine@gmx.de>
Maintainer:    Marc Fontaine <Marc.Fontaine@gmx.de>
License:       BSD-3-Clause
Stability:     Experimental
Tested-With:   GHC ==8.10.7 || ==8.6.5 || ==8.4.4 || ==8.2.2
Author:        Marc Fontaine
Build-Type:    Simple
Extra-Source-Files: STM32F103xx.svd

Source-Repository head
  type:     git
  location: git://github.com/MarcFontaine/stm32hs

library
  default-language  : Haskell2010
  ghc-options       : -Wall -Werror
  Build-depends     : base  >= 4 && < 5
                    , xml-lens >= 0.1 && < 0.2
                    , xml-conduit >= 1.7 && < 1.8
                    , pretty >=1.1 && < 1.2
                    , text >=1.2 && < 1.3
                    , containers >=0.5 && < 0.7
  Exposed-modules: SVD2HS
